--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ ext {
     lottie_ver = '3.0.0-beta2'
     rxAndroid = '2.1.1'
     rxJAVA = '2.2.9'
+    room_ver = "2.1.0-rc01"
 }
 apply plugin: 'com.android.application'
 
@@ -57,11 +58,13 @@ dependencies {
     //Navigation
     implementation "androidx.navigation:navigation-fragment:${navigation_ver}"
     implementation "androidx.navigation:navigation-ui:${navigation_ver}"
-
     //Dagger2
     implementation "com.google.dagger:dagger:${dagger2_ver}"
     annotationProcessor "com.google.dagger:dagger-compiler:${dagger2_ver}"
     compileOnly 'javax.annotation:jsr250-api:1.0'
+    //Room persistence
+    implementation "androidx.room:room-runtime:${room_ver}"
+    annotationProcessor "androidx.room:room-compiler:${room_ver}"
 
     //Yoyo view animation
     implementation 'com.daimajia.easing:library:2.1@aar'
@@ -74,5 +77,8 @@ dependencies {
     //RxJava, RxAndroid
     implementation "io.reactivex.rxjava2:rxandroid:${rxAndroid}"
     implementation "io.reactivex.rxjava2:rxjava:${rxJAVA}"
+
+
+
 
 }
