--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,14 @@ dependencies {
     //RxJava, RxAndroid
     implementation "io.reactivex.rxjava2:rxandroid:${rxAndroid}"
     implementation "io.reactivex.rxjava2:rxjava:${rxJAVA}"
+    // Retrofit http://square.github.io/retrofit
+     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+     implementation 'com.squareup.retrofit2:adapter-rxjava:2.4.0'
+     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    // GSON body parser
+    implementation 'com.google.code.gson:gson:2.8.2'
+
 
 
 
