--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,11 @@
 ext {
     navigation_ver = '2.1.0-alpha05'
-    dagger2_ver = '2.23.1'
-    lottie_ver = '3.0.0-beta2'
+    dagger2_ver = '2.23.2'
+    lottie_ver = '3.0.6'
     rxAndroid = '2.1.1'
     rxJAVA = '2.2.9'
     room_ver = "2.1.0-rc01"
+    retrofit_ver = "2.6.0"
 }
 apply plugin: 'com.android.application'
 
@@ -12,7 +13,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.0"
     defaultConfig {
-        applicationId "com.iotblue.weathermapapp"
+        applicationId "com.maymanm.weathermapapp"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
@@ -41,15 +42,15 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha01'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha06'
+    implementation 'com.google.android.material:material:1.1.0-alpha07'
     testImplementation 'junit:junit:4.13-beta-3'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     //GoogleMaps
-    implementation 'com.google.android.gms:play-services-maps:16.1.0'
-    implementation 'com.google.android.gms:play-services-location:16.0.0'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
 
     //Timber log
     implementation 'com.jakewharton.timber:timber:4.7.1'
@@ -58,10 +59,14 @@ dependencies {
     //Navigation
     implementation "androidx.navigation:navigation-fragment:${navigation_ver}"
     implementation "androidx.navigation:navigation-ui:${navigation_ver}"
+
     //Dagger2
     implementation "com.google.dagger:dagger:${dagger2_ver}"
+    implementation "com.google.dagger:dagger-android:${dagger2_ver}"
+    implementation "com.google.dagger:dagger-android-support:${dagger2_ver}"
     annotationProcessor "com.google.dagger:dagger-compiler:${dagger2_ver}"
-    compileOnly 'javax.annotation:jsr250-api:1.0'
+    annotationProcessor "com.google.dagger:dagger-android-processor:${dagger2_ver}"
+
     //Room persistence
     implementation "androidx.room:room-runtime:${room_ver}"
     annotationProcessor "androidx.room:room-compiler:${room_ver}"
@@ -77,16 +82,15 @@ dependencies {
     //RxJava, RxAndroid
     implementation "io.reactivex.rxjava2:rxandroid:${rxAndroid}"
     implementation "io.reactivex.rxjava2:rxjava:${rxJAVA}"
-    // Retrofit http://square.github.io/retrofit
-     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-     implementation 'com.squareup.retrofit2:adapter-rxjava:2.4.0'
-     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
-     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+
+    // Retrofit
+    implementation "com.squareup.retrofit2:retrofit:${retrofit_ver}"
+    implementation "com.squareup.retrofit2:adapter-rxjava:${retrofit_ver}"
+    implementation "com.squareup.retrofit2:converter-gson:${retrofit_ver}"
+    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.14.1'
     // GSON body parser
-    implementation 'com.google.code.gson:gson:2.8.2'
-
-
-
+    implementation 'com.google.code.gson:gson:2.8.5'
 
 
 }
